common-applications/freesky-icsl-hk-cluster/xihe-test-v2/finetune/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xihe-ingress
  namespace: xihe-test-v2
spec:
  ingressClassName: nginx
  rules:
  - host: finetune.test.osinfra.cn
    http:
      paths:
      - backend:
          service:
            name: service-finetune
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - finetune.test.osinfra.cn
    secretName: xihe-new-tls
